--- a/header.css
+++ b/header.css
@@ -1,22 +1,33 @@
 header{
 	text-align: center;
-	color: black;
-	padding: 1px;
+	color: white;
 	margin:0;
-	background-color: #2871af;
+	background-color: #0b5ca1 ;
+}
+
+.headerText{
+	background-color: #0b5ca1  !important;
 }
 
 .header1{
+	cursor: pointer;
 	display: inline-block;
+	margin-left: 20px !important;
+	border-bottom: 1px solid;
+	border-bottom-color: white;
 	float: left;
-	width: 10%;
+	margin: 5px;
+}
+.header2{
+	display: inline-block;
+	width: 70%;
+	margin: 5px;
 }
 .header3{
 	display: inline-block;
 	float: right;
-	width: 10%;
-}
-.header2{
-	display: inline-block;
-	width: 70s%;
+	margin-right: 20px !important;
+	border-bottom: 1px solid;
+	border-bottom-color: white;
+	margin: 5px;
 }
