--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body {
-	background: #2871af;
+	background: #0b5ca1 ;
 	font-family: lato;
 	margin:0;
 	padding:0;
@@ -11,18 +11,12 @@ footer{
 	background-color: black;
 }
 
-/*Slider*/
-.w3-content.w3-display-container {
-	height: 500px;
-}
-
 /*main Stats*/
 .mainStats{
-	width:100%;
-	background: #2871af;
+	background: #0b5ca1  !important;
 }
 .mainStats1, .mainStats2, .mainStats3, .mainStats4{
-	width: 24.77%;
+	float: left;
 	display: inline-block;
 	padding-top: 1%;
 	padding-bottom: 1%;
@@ -33,7 +27,7 @@ footer{
 	padding:0;
 	font-size: 24px;
 	font-weight: bold;
-	color: black;
+	color: white;
 	text-align: center;
 }
 
@@ -42,7 +36,7 @@ footer{
 	padding:0;
 	font-size: 20px;
 	font-weight: bold;
-	color: black;
+	color: white;
 	text-align: center;
 }
 
@@ -52,39 +46,39 @@ footer{
 	max-width:100%;
 	padding: 0;
 	margin: 0;
-	background: #2871af;
+	background: #0b5ca1 ;
 }
 
 .heading_in_about_us{
-	color: #2871af;
 	padding: 0;
 	margin: 0;
 	text-align: center;
-	font-size: 40px;
 	background-color: white;
 }
 .heading_in_about_us>h2{
-	margin:0%;
-	padding:0%;
+	margin:0px;
+	font-size: 40px;
+	padding-top: 1%;
+	padding-bottom: 1%;
 }
 
 .about_us > p {
 	font-size: 15px;
-	color: black;
+	color: white;
 	text-align: center;
 }
 
 .about_us.sect1, .about_us.sect2, .about_us.sect3{
 	padding-bottom: 1%;
-	padding: 0;
-	max-width: 33.13%;
+	padding: 1%;
 	display: inline-block;
+	float: left;
 }
 
 .hInSect{
 	text-align: center;
 	font-size: 20px;
-	color: black;
+	color: white;
 	margin-top: 20px;
 }
 
@@ -94,8 +88,9 @@ footer{
 }
 
 .row{
-	background-color: white;
-	margin: 0; 
+	/*! display: inline-block; */
+	/*! margin: 0; */ 
+	width: 100%;
 }
 
 .heading_in_Projects{
@@ -107,9 +102,10 @@ footer{
 	color: black;
 	text-align: center;
 	font-size: 40px;
-	margin-top: 0.5%;
-	margin-bottom: 0;
+	margin: 0;
 	width: 100%;
+	padding-top: 1%;
+	padding-bottom: 1%;
 }
 
 .projects > p {
@@ -119,15 +115,14 @@ footer{
 }
 
 .projectsSect1, .projectsSect2, .projectsSect3, .projectsSect4{
-	width: 22.77%;
 	padding: 1%;
 	display: inline-block;
 	background-color: white;
+	float: left;
 	margin: 0;
 }
 
 .projectsSection{
-	width: 100%;
 	border: 1px solid;
 	background-color: white;
 }
@@ -195,12 +190,12 @@ footer{
 }
 
 #progressbar::-moz-progress-bar {
-  background-color: #2871af;
+  background-color: #0b5ca1 ;
 }
 
 .Stats1, .Stats2, .Stats3{
 	margin: 0;
-	width: 31.47%;
+	float: left;
 	padding: 0.5%;
 	display: inline-block;
 }
@@ -225,3 +220,6 @@ footer{
 	padding: 1%;
 	text-align: center;
 }
+
+
+/* responsive */
