--- a/slider.css
+++ b/slider.css
@@ -1,22 +1,22 @@
 .w3-content{
-	max-width:980px;
-	margin:auto
+	max-width:100%;
+	margin:auto;
 }
 .w3-content.w3-display-container {
 	overflow: hidden;
-	position:relative;
-	max-width: 100%;
+	position: relative;
+	display: block;
+	height: 41.5vw;
 }
 .w3-content.w3-display-container > div > img {
 	max-width: 100%;
-	position: absolute;
 	width: auto\9;
 }
 .w3-display-bottommiddle {
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%,0%);
+	position: absolute;
+	left: 50%;
+	bottom: 0;
+	transform: translate(-50%,0%);
 	padding-top: 16px;
 	padding-bottom: 16px;
 }
