--- a/SignUp.css
+++ b/SignUp.css
@@ -9,6 +9,7 @@
 	background: transparent;
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.2s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    /*! align-content: center; */
 }
 
 .transparentContainer{
@@ -16,6 +17,9 @@
     height: 100%;
 	height: 100%;
 	position: absolute;
+	/*! align-content: center; */
+	/*! align-items: center; */
+	/*! content: " "; */
 }
 
 .translucentContainer{
@@ -24,6 +28,7 @@
     width:100%;  
     background-color: white; 
     opacity: 0.3;  
+	align-content: center;
 }
 
 /* Position the content inside the overlay */
@@ -31,10 +36,10 @@
     position: relative;
     width: 40%; 
     text-align: left;
-	left: 30%;	
+	left: 50%;	
 	background-color: white;
-    margin-top: 4.4%;
-    margin-bottom: 4.4%;
+    top: 50%;
+    transform: translate(-50%,-50%);
 }
 
 /* The navigation links inside the overlay */
